<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="org.jmonkeyengine.jme3androidexamples.MainActivity">

    <item
        android:id="@+id/optionMouseEvents"
        android:orderInCategory="100"
        android:title="@string/strOptionEnableMouseEventsTitle"
        android:showAsAction="never" />
    <item
        android:id="@+id/optionJoystickEvents"
        android:orderInCategory="200"
        android:title="@string/strOptionEnableJoystickEventsTitle"
        android:showAsAction="never" />
    <item
        android:id="@+id/optionKeyEvents"
        android:orderInCategory="300"
        android:title="@string/strOptionEnableKeyEventsTitle"
        android:showAsAction="never" />

    <item
        android:id="@+id/optionVerboseLogging"
        android:orderInCategory="300"
        android:title="@string/strOptionEnableVerboseLoggingTitle"
        android:showAsAction="never" />

    <!--
                android:icon="@mipmap/redmonkey"
                android:icon="@mipmap/greenmonkey"
                android:icon="@mipmap/bluemonkey"
        -->
</menu>
